adding the get my stream function
